--- a/style.css
+++ b/style.css
@@ -6,35 +6,11 @@ body {
     font-family: "Poppins", sans-serif;
     width: 100%;
     height: 100vh;
+    background: url("https://wallpapersmug.com/download/1920x1080/0ff2b5/minimalist-abstract-cubes-colorful.jpg"), no-repeat;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    background: url("https://wallpapersmug.com/download/1920x1080/0ff2b5/minimalist-abstract-cubes-colorful.jpg");
-}
-
-h1 {
-    font-family: 'Times New Roman', Times, serif;
-    text-shadow: 0px 0px 2px rgb(255, 0, 0) ;
-    font-weight: 300;
-    color: #fff;
-    transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1);
-    position: absolute;
-    top: 1.6em;
-    left: 6em;
-    right: 1.5em;
-}
-
-p {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
-    align-items: start;
-    font-size: 20px;
-    color: #ffffff;
-    margin: 250px;
-    font-weight: bold;
-    position: relative;
-    text-shadow: 0 0 5px rgb(0, 0, 0);
-
+    justify-content: flex-start;
 }
 
 .calculator {
@@ -46,6 +22,34 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
+}
+
+h1 {
+    font-family: 'Times New Roman', Times, serif;
+    text-shadow: 0px 0px 2px rgb(255, 0, 0) ;
+    font-weight: 300;
+    color: #fff;
+    transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1);
+    position: start;
+    background-color: #0000005e;
+    top: 1.6em;
+    left: 6em;
+    right: 1.5em;
+}
+
+p {
+    font-family: "Poppins","sans-serif";
+    text-align: justify;
+    align-items: start;
+    font-size: 18px;
+    color: #ffffff;
+    margin: 50px;
+    background-color: #0000005e;
+    background-size: 100%;
+    font-weight: bold;
+    position: relative;
+    text-shadow: 0 0 5px rgb(0, 0, 0);
 }
 
 input {
@@ -148,7 +152,7 @@ input {
 
 .wrapper {
     position: relative;
-    flex-direction: column;
+    flex-direction: row;
     display: inline-flex;
     list-style: none;
   }
@@ -166,7 +170,7 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
