--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: "Poppins", sans-serif;
     width: 100%;
     height: 100vh;
-    background: url("https://wallpapersmug.com/download/1920x1080/0ff2b5/minimalist-abstract-cubes-colorful.jpg"), no-repeat;
+    background: url("background.jpg"), no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,6 +29,7 @@ h1 {
     font-family: 'Times New Roman', Times, serif;
     text-shadow: 0px 0px 2px rgb(255, 0, 0) ;
     font-weight: 300;
+    text-align: center;
     color: #fff;
     transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1);
     position: start;
@@ -44,7 +45,7 @@ p {
     align-items: start;
     font-size: 18px;
     color: #ffffff;
-    margin: 50px;
+    margin: 20px;
     background-color: #0000005e;
     background-size: 100%;
     font-weight: bold;
